# syncology-rust

./: .gitignore  CHANGES.md  DIAGNOSTICS.md  DOCUMENTATION.md  ENTERPRISE_TASK_BACKLOG.md  README.md  index.html  package-lock.json  package.json  patch-version.cjs
.github/workflows/: build-windows-exe.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api.rs
src-tauri/src/config/: app.rs  firebase.rs
src-tauri/src/database/: firestore.rs  manager.rs  mod.rs  schema.sql  supabase.rs
src-tauri/src/models/: auth.rs
src-tauri/src/services/: auth.rs
src-tauri/src/utils/: cf_caller.rs  mod.rs
src/components/: Activity.css  ActivityTab.tsx  CalendarView.css  CalendarView.tsx  CommandPalette.css  CommandPalette.tsx  Confetti.css  Confetti.tsx  ConfirmModal.tsx  CreateRoomModal.tsx  CrossRoomDashboard.css  CrossRoomDashboard.tsx  HomeTab.css  HomeTab.tsx  ImageViewerModal.tsx  InputModal.tsx  JoinRoomModal.tsx  Ledger.css  LedgerTab.tsx  MemberProfileModal.css  MemberProfileModal.tsx  Modal.css  OnboardingTour.css  OnboardingTour.tsx  Overview.css  OverviewTab.tsx  ProposeTaskModal.css  ProposeTaskModal.tsx  ReviewWorkspace.css  ReviewWorkspace.tsx  RoomInfo.css  RoomInfoTab.tsx  Skeleton.css  Skeleton.tsx  SubmitEvidenceModal.tsx  TaskCard.tsx  TaskDetailModal.css  TaskDetailModal.tsx  Tasks.css  TasksTab.tsx
src/hooks/: useRoomWatcher.ts
src/lib/: api.ts  utils.ts
src/pages/: Dashboard.css  Dashboard.tsx  LoginPage.css  LoginPage.tsx
(+2 files in other folders)
