[package]
name = "syncology"
version = "0.1.99"
description = "Syncology desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "syncology_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json"] }
tokio = { version = "1.52.3", features = ["full"] }
thiserror = "2.0.18"
dirs = "6.0.0"
axum = "0.8.9"
tower-http = { version = "0.7.0", features = ["cors"] }
open = "5.4.0"
rand = { version = "0.10.2", features = ["std_rng"] }
chrono = "0.4.45"

